# AOC2024

./: .gdb_history  .gitignore  Cargo.toml  out.txt
src/: .gdb_history
src/day_1/: intput.txt  main.rs
src/day_2/: main.rs
src/day_3/: main.rs
src/day_4/: main.rs
src/day_5/: main.rs
src/day_6/: .gdb_history  main.rs
